# tellmewhattodo

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.ui  README.md  build-and-push-chart.sh  cli.py  docker-compose.yaml  entrypoint  entrypoint.sh  extractors.yml  index.html  main.py  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  tellme.yml  tsconfig.app.json  unit.config.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yaml  docker-image.yml  publish.yml
charts/tellmewhattodo/: Chart.yaml  values.yaml
charts/tellmewhattodo/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
charts/tmwtd/: Chart.yaml  values.yaml
charts/tmwtd/templates/: configmap.yaml  cronjob.yaml  service.yaml
job/: extractor.py  storage.py
scripts/: build-and-push-chart.sh  set-version.sh
tellmewhattodo/: __init__.py  api.py  cli.py  db.py  dependencies.py  extractor.py  job.py  models.py  schemas.py  settings.py  storage.py  tasks.py
tellmewhattodo-ui/: README.md  index.html  package.json
tellmewhattodo-ui/src/: App.vue
tellmewhattodo-ui/src/client/: schemas.gen.ts  services.gen.ts  types.gen.ts
tellmewhattodo-ui/src/components/: AlertItem.vue  AlertList.vue
tellmewhattodo/app/: app.py
tellmewhattodo/job/: extractor.py  job.py  storage.py
ui/: components.d.ts
ui/src/: App.vue  main.ts
ui/src/assets/: base.css  main.css
ui/src/client/: schemas.gen.ts  services.gen.ts  types.gen.ts
ui/src/components/: AlertItem.vue  AlertList.vue  datetime.ts
ui/src/components/__tests__/: AlertItem.spec.ts
