[tool.poetry]
name = "tellmewhattodo"
version = "6.0.0"
description = "Python backend for TMWTD"
authors = ["Martin Morset"]
license = "Apache 2.0"
packages = [{ include = "tellmewhattodo" }]

[tool.poetry.dependencies]
python = "^3.13"

pydantic = "^2.9"
requests = "^2.32"
PyYAML = "^6.0"
pydantic-settings = "^2.6"
fastapi = {extras = ["standard"], version = "^0.115.4"}
sqlalchemy = "^2.0"
celery = "^5.4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tools.black]
line-length = 100

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["FA102",
            "D100",
            "D101",
            "D102",
            "D103",
            "D104",
            "D105",
            "D106",
            "D107",
            "D203",
            "D213",
            "TCH001",
            "ISC001",
            "COM812"
            ]