[project]
name = "tellmewhattodo"
version = "7.1.4"
description = "Python backend for TMWTD"
authors = [{ name = "Martin Morset" }]
requires-python = "~=3.13"
license = "Apache-2.0"
dependencies = [
    "pydantic~=2.9",
    "requests~=2.32",
    "PyYAML~=6.0",
    "pydantic-settings~=2.6",
    "fastapi[standard]>=0.115.4,<0.116",
    "sqlalchemy~=2.0",
    "celery>=5.4.0,<6",
]

[dependency-groups]
dev = [
    "pre-commit~=4.0",
    "black~=24.10",
    "pytest~=8.3",
]

[tool.hatch.build.targets.sdist]
include = ["tellmewhattodo"]

[tool.hatch.build.targets.wheel]
include = ["tellmewhattodo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tools.black]
line-length = 100

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["FA102",
            "D100",
            "D101",
            "D102",
            "D103",
            "D104",
            "D105",
            "D106",
            "D107",
            "D203",
            "D213",
            "TCH001",
            "ISC001",
            "COM812"
            ]
